--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.25.1",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^11.7.3",
+    "framer-motion": "^12.11.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.0.2",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -24,6 +30,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.3.4"
   }
 }
